# hello-sol

./: .gitignore  package-lock.json  package.json
src/client/: main.ts
src/program/: Cargo.toml
src/program/src/: lib.rs
