[package]
name = "hello-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.11.0"

[dev_dependencies]
solana-program-test = "1.11.0"
solana-sdk = "1.11.0"

[lib]
crate-type = ["cdylib", "lib"]